Fixed print sizing and small updates to content on homepage

--- a/scss/views/home.scss
+++ b/scss/views/home.scss
@@ -112,6 +112,12 @@ section.home {
       }
     }
 
+    div.double-column {
+      display: flex;
+      row-gap: 2rem;
+      flex-direction: column;
+    }
+
     div.double-list {
       display: flex;
       row-gap: .25rem;
