--- a/scss/config/util/_text.scss
+++ b/scss/config/util/_text.scss
@@ -10,6 +10,10 @@ a {
   box-shadow: inset 0 0 0 .125rem #FFF;
 }
 
+strong {
+  font-weight: 600;
+}
+
 // ---------------------------------------------------------------- //
 
 *.text-center {
