Added extra work experience and updated coding skills

--- a/views/home.phtml
+++ b/views/home.phtml
@@ -340,16 +340,6 @@
                   <h3 class="hl-purple">FC1/DC4 Utrecht</h3>
                 </div>
               </div>
-
-              <div class="row">
-                <div class="col">
-                  <ul class="list">
-                    <li>Pakken van bestellingen voor klanten</li>
-                    <li>Rolcontainers met producten vullen voor andere PicNic locaties</li>
-                    <li>In- en uitladen van vrachtwagens</li>
-                  </ul>
-                </div>
-              </div>
             </div>
           </div>
 
@@ -395,6 +385,34 @@
                     <li>4 maanden afstudeer stage voor mijn MBO-4 opleiding</li>
                     <li>Project gemaakt voor stagebedrijf</li>
                   </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="row item-head">
+            <div class="col time">2018 - 2019</div>
+
+            <div class="col">
+              <div class="row">
+                <div class="col">
+                  <h3><span class="hl-red">Allround medewerker</span> / <span class="hl-green">Big Bazar</span></h3>
+
+                  <h3 class="hl-purple">Big Bazar Leidsche Rijn</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="row item-head">
+            <div class="col time">2017 - 2018</div>
+
+            <div class="col">
+              <div class="row">
+                <div class="col">
+                  <h3><span class="hl-red">Allround medewerker</span> / <span class="hl-green">GAMMA</span></h3>
+
+                  <h3 class="hl-purple">GAMMA De Meern</h3>
                 </div>
               </div>
             </div>
@@ -488,7 +506,7 @@
                     <div class="col fill"></div>
                     <div class="col fill"></div>
                     <div class="col fill"></div>
-                    <div class="col"></div>
+                    <div class="col fill"></div>
                   </div>
                 </div>
 
@@ -514,7 +532,7 @@
                     <div class="col fill"></div>
                     <div class="col fill"></div>
                     <div class="col fill"></div>
-                    <div class="col"></div>
+                    <div class="col fill"></div>
                     <div class="col"></div>
                   </div>
                 </div>
@@ -540,7 +558,34 @@
                     <div class="col fill"></div>
                     <div class="col fill"></div>
                     <div class="col fill"></div>
+                    <div class="col fill"></div>
                     <div class="col"></div>
+                    <div class="col"></div>
+                  </div>
+                </div>
+
+                <div class="col f-0">10</div>
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col label-sm">Python</div>
+
+            <div class="col">
+              <div class="row bar">
+                <div class="col f-0">0</div>
+
+                <div class="col">
+                  <div class="row meter">
+                    <div class="col fill"></div>
+                    <div class="col fill"></div>
+                    <div class="col fill"></div>
+                    <div class="col fill"></div>
+                    <div class="col fill"></div>
+                    <div class="col fill"></div>
+                    <div class="col fill"></div>
+                    <div class="col fill"></div>
                     <div class="col"></div>
                     <div class="col"></div>
                   </div>
@@ -567,33 +612,6 @@
                     <div class="col fill"></div>
                     <div class="col fill"></div>
                     <div class="col fill"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                  </div>
-                </div>
-
-                <div class="col f-0">10</div>
-              </div>
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="col label-sm">Python</div>
-
-            <div class="col">
-              <div class="row bar">
-                <div class="col f-0">0</div>
-
-                <div class="col">
-                  <div class="row meter">
-                    <div class="col fill"></div>
-                    <div class="col fill"></div>
-                    <div class="col fill"></div>
-                    <div class="col fill"></div>
-                    <div class="col fill"></div>
-                    <div class="col fill"></div>
-                    <div class="col"></div>
                     <div class="col"></div>
                     <div class="col"></div>
                     <div class="col"></div>
