Updated Simpl version, added new internship and fixed some stuff

--- a/views/home.phtml
+++ b/views/home.phtml
@@ -77,24 +77,24 @@
 
               <div class="row">
                 <div class="col label-md">LinkedIn</div>
-                <div class="col"><a href="https://www.linkedin.com/in/iwanvanderwal/" target="_blank">iwanvanderwal</a></div>
+                <div class="col"><a href="https://www.linkedin.com/in/iwanvanderwal" target="_blank">iwanvanderwal</a></div>
               </div>
 
               <div class="row">
                 <div class="col label-md">Website</div>
-                <div class="col"><a href="https://www.iwanvanderwal.nl/" target="_blank">www.iwanvanderwal.nl</a></div>
+                <div class="col"><a href="https://www.iwanvanderwal.nl" target="_blank">iwanvanderwal.nl</a></div>
               </div>
 
               <div class="row">
                 <div class="col label-md">GitHub</div>
-                <div class="col"><a href="https://github.com/IJuanTM/" target="_blank">IJuanTM</a></div>
+                <div class="col"><a href="https://github.com/IJuanTM" target="_blank">IJuanTM</a></div>
               </div>
             </div>
           </div>
 
           <div class="row no-print">
             <div class="col">
-              <p><strong>Ik kom graag verder in contact met u! U kunt mij bereiken via mijn e-mailadres of LinkedIn. U kunt ook dit CV uitprinten via de knop linksonder aan de pagina.</strong></p>
+              <p><strong>Ik kom graag verder in contact met u! U kunt mij bereiken via mijn e-mailadres of LinkedIn. U kunt ook dit cv uitprinten via de knop links onderaan de pagina of m.b.v Ctrl + P.</strong></p>
             </div>
           </div>
         </div>
@@ -283,6 +283,29 @@
 
       <div class="row">
         <div class="col items">
+          <div class="row item-head">
+            <div class="col time">2024</div>
+
+            <div class="col">
+              <div class="row">
+                <div class="col">
+                  <h3><span class="hl-red">Afstudeerder</span> / <span class="hl-green">Info Support</span></h3>
+
+                  <h3 class="hl-purple">Veenendaal</h3>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col">
+                  <ul class="list">
+                    <li>Afstudeeropdracht voor mijn HBO opleiding in het 4e jaar</li>
+                    <li>Maken van een berichtenmonitor applicatie voor een klant van Info Support</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div class="row item-head">
             <div class="col time">2023 - heden</div>
 
@@ -694,7 +717,7 @@
       <div class="row">
         <div class="col items">
           <div class="row item-head">
-            <div class="col time">2022 - heden</div>
+            <div class="col time">2023 - heden</div>
 
             <div class="col">
               <div class="row">
@@ -712,12 +735,12 @@
           </div>
 
           <div class="row item-head">
-            <div class="col time">2021 - heden</div>
+            <div class="col time">2022 - heden</div>
 
             <div class="col">
               <div class="row">
                 <div class="col">
-                  <h3><span class="hl-purple">Portfolio website</span> / <a href="https://www.iwanvanderwal.nl/" target="_blank">Website</a></h3>
+                  <h3><span class="hl-purple">Portfolio website</span> / <a href="https://www.iwanvanderwal.nl" target="_blank">Website</a></h3>
                 </div>
               </div>
 
@@ -735,7 +758,7 @@
             <div class="col">
               <div class="row">
                 <div class="col">
-                  <h3><span class="hl-purple">Simpl</span> / <a href="https://simpl.iwanvanderwal.nl/" target="_blank">Website</a> / <a href="https://github.com/IJuanTM/simpl/" target="_blank">GitHub</a></h3>
+                  <h3><span class="hl-purple">Simpl</span> / <a href="https://simpl.iwanvanderwal.nl" target="_blank">Website</a> / <a href="https://github.com/IJuanTM/simpl" target="_blank">GitHub</a></h3>
                 </div>
               </div>
 
@@ -753,7 +776,7 @@
             <div class="col">
               <div class="row">
                 <div class="col">
-                  <h3><span class="hl-purple">ZMDH zorgkliniek website</span> / <a href="https://github.com/aycan-acn/Care-Clinic-ZMDH/" target="_blank">GitHub</a></h3>
+                  <h3><span class="hl-purple">ZMDH zorgkliniek website</span> / <a href="https://github.com/aycan-acn/Care-Clinic-ZMDH" target="_blank">GitHub</a></h3>
                 </div>
               </div>
 
