--- a/views/parts/header.phtml
+++ b/views/parts/header.phtml
@@ -1,7 +1,7 @@
 <header>
   <div class="row navbar">
     <div class="col nav-title center f-0">
-      <h6><?= APP_NAME ?></h6>
+      <h6><?= ucwords(APP_NAME) ?></h6>
     </div>
 
     <nav class="col menu end-x">
