--- a/views/parts/index/meta.phtml
+++ b/views/parts/index/meta.phtml
@@ -9,7 +9,7 @@
 <meta name="author" content="Iwan van der Wal" lang="en">
 
 <!-- Description and keywords -->
-<meta name="description" content="Mijn eigen cv website!">
+<meta name="description" content="Mijn curriculum vitae website!">
 <meta name="keywords" content="cv, curriculum vitae">
 
 <!-- Theme color -->
