--- a/views/parts/top.phtml
+++ b/views/parts/top.phtml
@@ -3,10 +3,10 @@
 <html lang="nl">
 <head>
   <!-- Title -->
-  <title><?= APP_NAME . ' - Iwan van der Wal' ?></title>
+  <title><?= ucwords(APP_NAME) . ' - Iwan van der Wal' ?></title>
 
   <!-- Base -->
-  <base href="<?= BASE_URL ?>">
+  <base href="<?= APP_URL ?>">
 
   <!-- Meta and links -->
   <?php
@@ -20,7 +20,7 @@
 <body>
 <!-- Noscript -->
 <noscript class="center h-100 w-100">
-  <p class="text-center">Deze gebruikt JavaScript. Zet JavaScript aan om deze website te kunnen bekijken.</p>
+  <p class="text-center">Deze website gebruikt JavaScript. Zet JavaScript aan om deze website te kunnen bekijken.</p>
 </noscript>
 
 <!-- Header -->
