--- a/scss/config/vars/_colors.scss
+++ b/scss/config/vars/_colors.scss
@@ -9,6 +9,11 @@ $light-7: #E8E8E8;
 $light-8: #D8D8D8;
 $light-9: #C8C8C8;
 
+// Theme
+$theme-1: #002244;
+$theme-2: #224466;
+$theme-3: #446688;
+
 // Simpl
 $simpl-light: #E02028;
 $simpl: #D01018;
