Updated sitemap, index and manifest

--- a/views/parts/index/meta.phtml
+++ b/views/parts/index/meta.phtml
@@ -13,4 +13,4 @@
 <meta name="keywords" content="cv, curriculum vitae">
 
 <!-- Theme color -->
-<meta name="theme-color" content="#09203F">
+<meta name="theme-color" content="#224466">
