--- a/views/parts/index/preload.phtml
+++ b/views/parts/index/preload.phtml
@@ -1,2 +1,7 @@
 <!-- Fonts -->
 <link rel="preload" href="<?= $this->url('fonts/webfonts/Rubik.woff2') ?>" as="font" type="font/woff2" crossorigin>
+
+<!-- Font Awesome Icons -->
+<link rel="preload" href="<?= $this->url('fonts/webfonts/fa-brands-400.woff2') ?>" as="font" type="font/woff2" crossorigin>
+<link rel="preload" href="<?= $this->url('fonts/webfonts/fa-regular-400.woff2') ?>" as="font" type="font/woff2" crossorigin>
+<link rel="preload" href="<?= $this->url('fonts/webfonts/fa-solid-900.woff2') ?>" as="font" type="font/woff2" crossorigin>
