--- a/views/parts/index/css.phtml
+++ b/views/parts/index/css.phtml
@@ -4,6 +4,12 @@
 <!-- Fonts -->
 <link rel="stylesheet" href="<?= $this->url('fonts/fonts.css') ?>">
 
+<!-- Font Awesome Icons -->
+<link rel="stylesheet" href="<?= $this->url('fonts/icons/brands.min.css') ?>">
+<link rel="stylesheet" href="<?= $this->url('fonts/icons/fontawesome.min.css') ?>">
+<link rel="stylesheet" href="<?= $this->url('fonts/icons/regular.min.css') ?>">
+<link rel="stylesheet" href="<?= $this->url('fonts/icons/solid.min.css') ?>">
+
 <!-- Hamburgers -->
 <link rel="stylesheet" href="<?= $this->url('css/hamburgers.min.css') ?>">
 
