Small change to header

--- a/views/parts/header.phtml
+++ b/views/parts/header.phtml
@@ -1,5 +1,5 @@
 <header>
-  <div class="row navbar">
+  <div class="row navbar f-nowrap">
     <div class="col nav-title center f-0">
       <h6><?= ucwords(APP_NAME) ?></h6>
     </div>
